gcc/testsuite/g++.dg/parse/namespace1.C
namespace a {
    namespace b {
        void foo();
    }
}

void
a::b:foo() // { dg-error "" }
{
}
